# File_Transferer

./: .gitignore  CMakeLists.txt  readme.md
src/connectors/: CMakeLists.txt  clients.cpp  clients.h  connector.cpp  connector.h  servers.cpp  servers.h
src/filemanager/: CMakeLists.txt  filemanager.cpp  filemanager.h
src/main/: CMakeLists.txt  filereader.h  netfiletransferer.cpp  netfiletransferer.h  serv.cpp
